Use compact object headers.